Update dossier document

--- a/modules/swagger-generate/src/main/resources/opencps.yaml
+++ b/modules/swagger-generate/src/main/resources/opencps.yaml
@@ -708,6 +708,10 @@ paths:
           in: formData 
           type: file
           description: The file to upload
+        - name: referenceUid
+          in: formData 
+          type: string
+          description: reference uid of document
         - name: documentType
           in: formData 
           type: string
