--- a/modules/backend-api-rest/build.gradle
+++ b/modules/backend-api-rest/build.gradle
@@ -36,6 +36,11 @@ dependencies {
 	compileOnly project(":modules:backend-synchronization:backend-synchronization-service")
 	
 	compileOnly project(":modules:backend-auth")
+	// https://mvnrepository.com/artifact/uk.org.okapibarcode/okapibarcode
+	compile group: 'uk.org.okapibarcode', name: 'okapibarcode', version: '0.1.7'	
+	compile group: 'com.beust', name: 'jcommander', version: '1.48'
+	// https://mvnrepository.com/artifact/com.google.zxing/core
+	compile group: 'com.google.zxing', name: 'core', version: '3.3.0'
 	
 	testCompile group: "junit", name: "junit", version: "4.12"
 }	
