--- a/modules/backend-statistic/opencps-statistic-rest/src/main/resources/dossierconfig.properties
+++ b/modules/backend-statistic/opencps-statistic-rest/src/main/resources/dossierconfig.properties
@@ -2,8 +2,7 @@
 opencps.rest.enpoind.govagency = http://127.0.0.1:8080/o/rest/v2/dictcollections/GOVERNMENT_AGENCY/dictitems
 
 ##Dossier
-
-opencps.rest.enpoind.dossier = http://127.0.0.1:8080/o/rest/statistics/dossiers
+opencps.rest.enpoind.dossier = http://127.0.0.1:8080/o/rest/v2/dossiers
 
 #ServiceInfo
 opencps.rest.enpoint.service.info = http://127.0.0.1:8080/o/rest/v2/serviceinfos
