--- a/modules/backend-auth/build.gradle
+++ b/modules/backend-auth/build.gradle
@@ -7,7 +7,11 @@ dependencies {
 	
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
-		compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
-		compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.0.1"
+	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
+	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.0.1"
+
+	compileOnly group: "javax.mail", name: "mail", version: "1.4"
+
+	compileOnly group: "com.liferay", name: "org.freemarker", version: "2.3.23.LIFERAY-PATCHED-1"
 	
 }
