--- a/modules/backend-auth/build.gradle
+++ b/modules/backend-auth/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+  id "org.sonarqube" version "2.6"
+}
 dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
