--- a/modules/backend-statistic-service/backend-statistic-service-service/build.gradle
+++ b/modules/backend-statistic-service/backend-statistic-service-service/build.gradle
@@ -5,6 +5,10 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
 	compileOnly project(":modules:backend-statistic-service:backend-statistic-service-api")
 	compileOnly group: "com.liferay", name: "com.liferay.portal.dao.orm.custom.sql.api", version: "1.0.0"
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.9'
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.9'
+	compile group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
 	
 	compile "com.liferay:com.liferay.osgi.service.tracker.collections:2.0.0"
 }
