--- a/modules/backend-postal-api-rest/build.gradle
+++ b/modules/backend-postal-api-rest/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	compileOnly project(":modules:backend-auth")
 	compileOnly project(":modules:backend-feedback:backend-feedback-service")
 	compileOnly project(":modules:backend-feedback:backend-feedback-api")
+	compileOnly project(":modules:backend-communication:backend-communication-service")
+	compileOnly project(":modules:backend-communication:backend-communication-api")
 	
 	compileOnly name: 'VNPostNGSPSDK'
 	compileOnly name: 'gson-2.8.0'
