Fix ftl template error

--- a/modules/backend-auth/build.gradle
+++ b/modules/backend-auth/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 
 	compileOnly group: "javax.mail", name: "mail", version: "1.4"
 
-	compileOnly group: 'org.freemarker', name: 'freemarker', version: '2.3.28'
-	
+	//compileOnly group: 'org.freemarker', name: 'freemarker', version: '2.3.28'
+	compileOnly group: "com.liferay", name: "org.freemarker", version: "2.3.23.LIFERAY-PATCHED-4"
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
 }
