--- a/modules/backend-statistic-rest/build.gradle
+++ b/modules/backend-statistic-rest/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 	
 	compileOnly group: "org.osgi", name: "org.osgi.service.jaxrs", version: "1.0.0"
 	compileOnly group: 'com.liferay', name: 'com.liferay.oauth2.provider.scope.api', version: '1.0.2'
+	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
 	
 	compileOnly project(":modules:backend-statistic-service:backend-statistic-service-api")
 	compileOnly project(":modules:backend-statistic-service:backend-statistic-service-service")
