--- a/modules/backend-statistic-rest/src/main/resources/dossierconfig.properties
+++ b/modules/backend-statistic-rest/src/main/resources/dossierconfig.properties
@@ -1,6 +1,9 @@
 ##GovAgency
 opencps.rest.enpoind.govagency = http://127.0.0.1:8080/o/rest/v2/dictcollections/GOVERNMENT_AGENCY/dictitems
 
+##GovAgency
+opencps.rest.enpoind.servicedomain = http://127.0.0.1:8080/o/rest/v2/dictcollections/SERVICE_DOMAIN/dictitems
+
 ##Dossier
 opencps.rest.enpoind.dossier = http://127.0.0.1:8080/o/rest/v2/dossiers
 
