--- a/modules/backend-feedback/backend-feedback-service/build.gradle
+++ b/modules/backend-feedback/backend-feedback-service/build.gradle
@@ -6,6 +6,7 @@ dependencies {
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.0.1"
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 
 	compileOnly project(":modules:backend-feedback:backend-feedback-api")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
