--- a/modules/backend-api-rest/build.gradle
+++ b/modules/backend-api-rest/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     runtime 'io.jsonwebtoken:jjwt-impl:0.10.2',
             //'org.bouncycastle:bcprov-jdk15on:1.60',
             'io.jsonwebtoken:jjwt-jackson:0.10.2'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
             	
 	testCompile group: "junit", name: "junit", version: "4.12"
 }
