--- a/modules/backend-api-rest-v2-1/build.gradle
+++ b/modules/backend-api-rest-v2-1/build.gradle
@@ -38,4 +38,5 @@ dependencies {
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
 
 	compileOnly project(":modules:backend-auth")
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 }
