Update dossier document API

--- a/modules/backend-api-rest-v2-1/build.gradle
+++ b/modules/backend-api-rest-v2-1/build.gradle
@@ -108,7 +108,7 @@ task generate {
         'invokerPackage': '' + "$invokerPackage",
         'modelPackage'  : '' + "$modelPackage",
         'apiPackage'    : '' + "$apiPackage",
-        'dateLibrary'   : 'java8'
+//        'dateLibrary'   : 'java8'
     ]
     
     println properties
