--- a/modules/backend-statistic-service/backend-statistic-service-service/build.gradle
+++ b/modules/backend-statistic-service/backend-statistic-service-service/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 	compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.9'
 	compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.9'
 	compileOnly group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
+	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
 	
 	compile "com.liferay:com.liferay.osgi.service.tracker.collections:2.0.0"
 }
