# WARNING: head commit changed in the meantime
Merge remote-tracking branch 'OpenCPS/release-candidate-2.1-lf7.1' into
release-candidate-2.1-lf7.1_FFFFFF

Conflicts:
	modules/backend-dossiermgt/backend-dossiermgt-service/src/main/java/org/opencps/dossiermgt/model/impl/DossierModelImpl.java
	modules/backend-dossiermgt/backend-dossiermgt-service/src/main/java/org/opencps/dossiermgt/service/impl/DossierActionLocalServiceImpl.java
	modules/backend-dossiermgt/backend-dossiermgt-service/src/main/java/org/opencps/dossiermgt/service/impl/DossierFileLocalServiceImpl.java
	modules/backend-dossiermgt/backend-dossiermgt-service/src/main/java/org/opencps/dossiermgt/service/impl/DossierLocalServiceImpl.java
	modules/backend-dossiermgt/backend-dossiermgt-service/src/main/java/org/opencps/dossiermgt/service/impl/PaymentFileLocalServiceImpl.java
	modules/backend-dossiermgt/backend-dossiermgt-service/src/main/resources/service.properties

--- a/wars/gate/build.gradle
+++ b/wars/gate/build.gradle
@@ -52,6 +52,9 @@ dependencies {
 
 	compileOnly project(":modules:backend-admin-config:backend-admin-config-api")
 	compileOnly project(":modules:backend-admin-config:backend-admin-config-service")
+
+	compileOnly project(":modules:backend-deliverable:backend-deliverable-api")
+	compileOnly project(":modules:backend-deliverable:backend-deliverable-service")
 	
 }
 
