--- a/modules/backend-deliverable/backend-deliverable-service/build.gradle
+++ b/modules/backend-deliverable/backend-deliverable-service/build.gradle
@@ -7,6 +7,9 @@ dependencies {
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-service")
 	
+	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
+	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
+	
 }
 
 buildService {
