--- a/modules/opencps-smsprocess/opencps-smsprocess-service/build.gradle
+++ b/modules/opencps-smsprocess/opencps-smsprocess-service/build.gradle
@@ -8,7 +8,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/javax.xml/jaxrpc-api
 	compile group: 'javax.xml', name: 'jaxrpc-api', version: '1.1'
 
-
+	compileOnly group: 'com.liferay', name: 'com.liferay.portal.dao.orm.custom.sql', version: '1.0.17'
 
 	compileOnly project(":modules:opencps-smsprocess:opencps-smsprocess-api")
 	compileOnly project(":modules:backend-statistic-common")
