--- a/modules/backend-deliverable/backend-deliverable-service/build.gradle
+++ b/modules/backend-deliverable/backend-deliverable-service/build.gradle
@@ -4,6 +4,9 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
 	compileOnly project(":modules:backend-deliverable:backend-deliverable-api")
 	
+	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.0"
+	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
+	
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-service")
 	
