--- a/modules/backend-deliverable/backend-deliverable-service/build.gradle
+++ b/modules/backend-deliverable/backend-deliverable-service/build.gradle
@@ -6,6 +6,7 @@ dependencies {
 	
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.0"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
+	compileOnly group: 'commons-io', name: 'commons-io', version: '2.6'
 	
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-service")
