--- a/modules/backend-admin-config/backend-admin-config-service/build.gradle
+++ b/modules/backend-admin-config/backend-admin-config-service/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
 	compileOnly group: 'org.springframework', name: 'spring-dao', version: '2.0.8'
 	compileOnly group: "org.springframework", name: "spring-webmvc-portlet", version: "4.1.9.RELEASE"
+	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.0"
 }
 
 buildService {
