--- a/modules/backend-api-rest/build.gradle
+++ b/modules/backend-api-rest/build.gradle
@@ -49,6 +49,14 @@ dependencies {
             //'org.bouncycastle:bcprov-jdk15on:1.60',
             'io.jsonwebtoken:jjwt-jackson:0.10.2'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-            	
+    
+    compile name : "DKDN.GTVT.1.0", transitive:false  
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'      	
 	testCompile group: "junit", name: "junit", version: "4.12"
+}
+
+repositories {
+    flatDir {
+        dirs 'lib'
+    }
 }
