--- a/modules/backend-api-rest/build.gradle
+++ b/modules/backend-api-rest/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	compileOnly project(":modules:backend-communication:backend-communication-service")
 	compileOnly project(":modules:backend-synchronization:backend-synchronization-api")
 	compileOnly project(":modules:backend-synchronization:backend-synchronization-service")
+	compileOnly project(":modules:backend-deliverable:backend-deliverable-api")
+	compileOnly project(":modules:backend-deliverable:backend-deliverable-service")
 	
 	compileOnly project(":modules:backend-auth")
 	// https://mvnrepository.com/artifact/uk.org.okapibarcode/okapibarcode
