--- a/modules/backend-feedback/backend-feedback-service/build.gradle
+++ b/modules/backend-feedback/backend-feedback-service/build.gradle
@@ -11,6 +11,8 @@ dependencies {
 	compileOnly project(":modules:backend-feedback:backend-feedback-api")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
+	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
+	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
 }
 
 buildService {
