--- a/modules/backend-statistic-rest/src/main/resources/dossierconfig.properties
+++ b/modules/backend-statistic-rest/src/main/resources/dossierconfig.properties
@@ -10,6 +10,9 @@ opencps.rest.enpoind.dossier = http://127.0.0.1:8080/o/rest/v2/dossiers
 #ServiceInfo
 opencps.rest.enpoint.service.info = http://127.0.0.1:8080/o/rest/v2/serviceinfos
 
+#VotingResult
+opencps.rest.enpoint.voting.result = http://127.0.0.1:8080/o/rest/v2/postal/votings/statistic
+
 #Common
 opencps.rest.authentication = dGVzdEBsaWZlcmF5LmNvbTpQaHV0aG9vcGVuY3BzISVAODAxOQ
 
