--- a/modules/backend-communication/backend-communication-service/build.gradle
+++ b/modules/backend-communication/backend-communication-service/build.gradle
@@ -7,7 +7,11 @@ dependencies {
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-
+	// https://mvnrepository.com/artifact/com.liferay/org.apache.axis
+	compile group: 'com.liferay', name: 'org.apache.axis', version: '1.4.LIFERAY-PATCHED-1'
+	// https://mvnrepository.com/artifact/javax.xml/jaxrpc-api
+	compile group: 'javax.xml', name: 'jaxrpc-api', version: '1.1'
+	
 	compileOnly project(":modules:backend-communication:backend-communication-api")
 	compileOnly project(":modules:backend-auth")
 }
