--- a/modules/backend-communication/backend-communication-service/build.gradle
+++ b/modules/backend-communication/backend-communication-service/build.gradle
@@ -11,6 +11,9 @@ dependencies {
 	compile group: 'com.liferay', name: 'org.apache.axis', version: '1.4.LIFERAY-PATCHED-1'
 	// https://mvnrepository.com/artifact/javax.xml/jaxrpc-api
 	compile group: 'javax.xml', name: 'jaxrpc-api', version: '1.1'
+	compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
+	compile group: 'commons-discovery', name: 'commons-discovery', version: '0.5'
+	compile group: 'wsdl4j', name: 'wsdl4j', version: '1.6.2'
 	
 	compileOnly project(":modules:backend-communication:backend-communication-api")
 	compileOnly project(":modules:backend-auth")
