Update send sms

--- a/modules/opencps-smsprocess/opencps-smsprocess-service/src/main/resources/dossierconfig.properties
+++ b/modules/opencps-smsprocess/opencps-smsprocess-service/src/main/resources/dossierconfig.properties
@@ -10,11 +10,11 @@ opencps.backend.password = Phuthoopencps!%@8019
 
 opencps.backend.search.start = 0
 
-opencps.backend.search.end = 1;
+opencps.backend.search.end = 1
 
-opencps.backend.mo.number = 8369;
+opencps.backend.mo.number = 8369
 
-opencps.backend.smsgateway.user = "viettelgw";
+opencps.backend.smsgateway.user = viettelgw
 
-opencps.backend.smsgateway.password = "Viet12tel#gw";
+opencps.backend.smsgateway.password = Viet12tel#gw
 
