--- a/modules/backend-statistic-rest/src/main/resources/dossierconfig.properties
+++ b/modules/backend-statistic-rest/src/main/resources/dossierconfig.properties
@@ -14,8 +14,9 @@ opencps.rest.enpoint.service.info = http://127.0.0.1:8080/o/rest/v2/serviceinfos
 opencps.rest.enpoint.voting.result = http://127.0.0.1:8080/o/rest/v2/postal/votings/statistic
 
 #Common
-opencps.rest.authentication = dGVzdEBsaWZlcmF5LmNvbTpQaHV0aG9vcGVuY3BzISVAODAxOQ
-
+opencps.rest.authentication=dGVzdEBsaWZlcmF5LmNvbTpQaHV0aG9vcGVuY3BzISVAODAxOQ==
+#opencps.rest.authentication=dGVzdEBsaWZlcmF5LmNvbTp0ZXN0
+#opencps.rest.authentication=dGVzdEBsaWZlcmF5LmNvbTpraG9uZ2JpZXQ=
 #GroupId
 
 opencps.group.id.config = 391920
