--- a/modules/backend-api-rest/build.gradle
+++ b/modules/backend-api-rest/build.gradle
@@ -53,7 +53,10 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     
     compile name : "DKDN.GTVT.1.0", transitive:false  
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'      	
+    compile name : "filters-2.0.235", transitive:false
+    compile name : "jcaptcha-2.0-alpha-1-SNAPSHOT", transitive:false
+    compile name : "jcaptcha-api-1.0", transitive:false
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7' 
 	testCompile group: "junit", name: "junit", version: "4.12"
 }
 
