--- a/wars/v1/build.gradle
+++ b/wars/v1/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 	
 	compile 'com.graphql-java:graphql-java:3.0.0'
     compile "com.graphql-java:graphql-java-annotations:0.13.1"
-    
+    	
     compileOnly project(":modules:backend-auth")
 	
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
@@ -50,8 +50,17 @@ dependencies {
 	compileOnly project(":modules:backend-deliverable:backend-deliverable-api")
 	compileOnly project(":modules:backend-deliverable:backend-deliverable-service")
 	
+	compile name : "filters-2.0.235", transitive:false
+    compile name : "jcaptcha-2.0-alpha-1-SNAPSHOT", transitive:false
+    compile name : "jcaptcha-api-1.0", transitive:false
 }
 
 war {
 	includeEmptyDirs = false
+}
+
+repositories {
+    flatDir {
+        dirs 'lib'
+    }
 }
