--- a/modules/backend-auth/build.gradle
+++ b/modules/backend-auth/build.gradle
@@ -20,3 +20,8 @@ dependencies {
 	compileOnly group: "com.liferay", name: "org.freemarker", version: "2.3.23.LIFERAY-PATCHED-4"
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
 }
+repositories {
+    flatDir {
+        dirs 'lib'
+    }
+}
