Update sms config

--- a/modules/opencps-smsprocess/opencps-smsprocess-service/src/main/resources/dossierconfig.properties
+++ b/modules/opencps-smsprocess/opencps-smsprocess-service/src/main/resources/dossierconfig.properties
@@ -2,7 +2,8 @@
 opencps.rest.endpoint.dossier = http://127.0.0.1:8080/o/rest/v2/dossiers
 
 #GroupId
-opencps.group.id.config = 52737
+#opencps.group.id.config = 52737
+opencps.group.id.config = 35818
 
 opencps.backend.username = test@liferay.com
 
