--- a/modules/backend-postal-api-rest/build.gradle
+++ b/modules/backend-postal-api-rest/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	compileOnly project(":modules:backend-feedback:backend-feedback-api")
 	compileOnly project(":modules:backend-communication:backend-communication-service")
 	compileOnly project(":modules:backend-communication:backend-communication-api")
+	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
+	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
 	
 	compileOnly name: 'VNPostNGSPSDK'
 	compileOnly name: 'gson-2.8.0'
