--- a/modules/backend-api-rest/build.gradle
+++ b/modules/backend-api-rest/build.gradle
@@ -47,8 +47,8 @@ dependencies {
 	compileOnly project(":modules:backend-deliverable:backend-deliverable-api")
 	compileOnly project(":modules:backend-deliverable:backend-deliverable-service")
 	
-	compileOnly project(":modules:backend-cache-builder:backend-cache-builder-api")
-	compileOnly project(":modules:backend-cache-builder:backend-cache-builder-service")
+	//compileOnly project(":modules:backend-cache-builder:backend-cache-builder-api")
+	//compileOnly project(":modules:backend-cache-builder:backend-cache-builder-service")
 	
 	compileOnly project(":modules:backend-auth")
 	// https://mvnrepository.com/artifact/uk.org.okapibarcode/okapibarcode
