--- a/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
@@ -20,8 +20,8 @@ dependencies {
 	compileOnly project(":modules:backend-deliverable:backend-deliverable-api")
 	compileOnly project(":modules:backend-deliverable:backend-deliverable-service")
 
-	//compileOnly project(":modules:backend-cache-builder:backend-cache-builder-api")
-	//compileOnly project(":modules:backend-cache-builder:backend-cache-builder-service")
+	compileOnly project(":modules:backend-cache-builder:backend-cache-builder-api")
+	compileOnly project(":modules:backend-cache-builder:backend-cache-builder-service")
 
 	testCompile group: "junit", name: "junit", version: "4.12"
 }	
