--- a/modules/backend-statistic-rest/src/main/resources/dossierconfig.properties
+++ b/modules/backend-statistic-rest/src/main/resources/dossierconfig.properties
@@ -13,6 +13,8 @@ opencps.rest.enpoint.service.info = http://127.0.0.1:8080/o/rest/v2/serviceinfos
 #VotingResult
 opencps.rest.enpoint.voting.result = http://127.0.0.1:8080/o/rest/v2/postal/votings/statistic
 
+opencps.rest.enpoint.statistic.report = http://127.0.0.1:8080/o/rest/statistics/reports
+
 #Common
 opencps.rest.authentication=dGVzdEBsaWZlcmF5LmNvbTpQaHV0aG9vcGVuY3BzISVAODAxOQ==
 #opencps.rest.authentication=dGVzdEBsaWZlcmF5LmNvbTp0ZXN0
