--- a/modules/opencps-smsprocess/opencps-smsprocess-service/src/main/resources/configuration/com.liferay.portal.remote.soap.extender.configuration.SoapExtenderConfiguration-soap.properties
+++ b/modules/opencps-smsprocess/opencps-smsprocess-service/src/main/resources/configuration/com.liferay.portal.remote.soap.extender.configuration.SoapExtenderConfiguration-soap.properties
@@ -2,3 +2,5 @@ contextPaths=/web-services
 jaxWsServiceFilterStrings=(component.name=org.opencps.sms.service.application.Calculator)
 jaxWsServiceFilterStrings=(component.name=org.opencps.sms.service.application.SMSGateway)
 jaxWsServiceFilterStrings=(component.name=org.opencps.sms.service.application.GAPITGatewayImpl)
+jaxWsServiceFilterStrings=(component.name=org.tempuri.SMSViettelMO)
+jaxWsServiceFilterStrings=(component.name=org.tempuri.Calculator2)
