--- a/modules/backend-statistic-rest/build.gradle
+++ b/modules/backend-statistic-rest/build.gradle
@@ -28,4 +28,8 @@ dependencies {
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
 	compileOnly project(":modules:backend-communication:backend-communication-api")
 	compileOnly project(":modules:backend-communication:backend-communication-service")
+	
+	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
+	compileOnly project(":modules:backend-datamgt:backend-datamgt-service")
+	
 }
