--- a/modules/backend-zalo-hook/build.gradle
+++ b/modules/backend-zalo-hook/build.gradle
@@ -1,5 +1,9 @@
 dependencies {
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
+	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
+	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
+	compileOnly group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
+
 	compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "2.0.0"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
@@ -9,4 +13,15 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.log", version: "1.4.0"
 	
+	compileOnly project(":modules:backend-communication:backend-communication-api")
+	compileOnly project(":modules:backend-communication:backend-communication-service")
+	
+	compile name : "VNPostNGSPSDK", transitive:false
+	compile name : "gson-2.8.0", transitive:false
+}
+
+repositories {
+	flatDir {
+		dirs 'libs'
+	}
 }
