--- a/modules/backend-usermgt/backend-usermgt-service/build.gradle
+++ b/modules/backend-usermgt/backend-usermgt-service/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 	compileOnly project(":modules:backend-communication:backend-communication-api")
 	
 	compileOnly project(":modules:backend-auth")
+	compileOnly project(":modules:backend-cache-builder:backend-cache-builder-api")
+	compileOnly project(":modules:backend-cache-builder:backend-cache-builder-service")
 	
 }
 
