--- a/modules/backend-cache-builder/backend-cache-builder-api/build.gradle
+++ b/modules/backend-cache-builder/backend-cache-builder-api/build.gradle
@@ -2,4 +2,8 @@ dependencies {
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.5.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
+	
+	compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
+
+	compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.5.0'
 }
