--- a/modules/backend-statistic-rest/src/main/resources/dossierconfig.properties
+++ b/modules/backend-statistic-rest/src/main/resources/dossierconfig.properties
@@ -15,6 +15,8 @@ opencps.rest.enpoint.voting.result = http://127.0.0.1:8080/o/rest/v2/postal/voti
 
 opencps.rest.enpoint.statistic.report = http://127.0.0.1:8080/o/rest/statistics/reports
 
+opencps.google.enpoint=http://google.com
+
 #Common
 opencps.rest.authentication=dGVzdEBsaWZlcmF5LmNvbTpQaHV0aG9vcGVuY3BzISVAODAxOQ==
 #opencps.rest.authentication=dGVzdEBsaWZlcmF5LmNvbTp0ZXN0
@@ -23,6 +25,7 @@ opencps.rest.authentication=dGVzdEBsaWZlcmF5LmNvbTpQaHV0aG9vcGVuY3BzISVAODAxOQ==
 
 opencps.group.id.config = 391920
 
-
+opencps.voting.classname.dossier=dossier
+opencps.voting.classname.employee=employee
 
 
