--- a/modules/backend-dossiermgt/backend-dossiermgt-service/src/main/resources/constants.properties
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/src/main/resources/constants.properties
@@ -96,3 +96,23 @@ org.opencps.value.permission.write=write
 org.opencps.value.pre.agency=agency
 org.opencps.value.pre.template=template
 org.opencps.value.pre.service=service
+org.opencps.value.action.fix=9100
+org.opencps.value.base.url=http://webservices.keypay.vn/resources
+org.opencps.value.base.urljson=http://webservices.keypay.vn/jsonresources
+#Character
+org.opencps.value.character.zero=0
+org.opencps.value.character.one=1
+org.opencps.value.character.two=2
+org.opencps.value.character.three=3
+org.opencps.value.character.four=4
+org.opencps.value.character.five=5
+org.opencps.value.character.six=6
+org.opencps.value.character.seven=7
+org.opencps.value.character.eight=8
+org.opencps.value.character.night=9
+org.opencps.value.character.a=A
+org.opencps.value.character.b=B
+org.opencps.value.character.c=C
+org.opencps.value.character.d=D
+org.opencps.value.character.e=E
+org.opencps.value.character.f=F
