--- a/modules/backend-dossiermgt/backend-dossiermgt-service/src/main/resources/constants.properties
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/src/main/resources/constants.properties
@@ -58,6 +58,7 @@ org.opencps.contenttype.image=image/
 org.opencps.contenttype.png=image/png
 org.opencps.contenttype.pdf=application/pdf
 org.opencps.contenttype.json=application/json
+org.opencps.contenttype.form.urlencode=application/x-www-form-urlencoded
 #Role
 org.opencps.role.admin=Administrator
 org.opencps.role.admin.data=Administrator_data
@@ -74,6 +75,17 @@ org.opencps.status.new=new
 org.opencps.status.cancelling=cancelling
 org.opencps.status.correcting=correcting
 org.opencps.status.submitting=submitting
+org.opencps.status.interoperating=interoperating
+org.opencps.status.receiving=receiving
+org.opencps.status.waiting=waiting
+org.opencps.status.processing=processing
+org.opencps.status.pausing=pausing
+org.opencps.status.posting=posting
+org.opencps.status.releasing=releasing
+org.opencps.status.denied=denied
+org.opencps.status.unresolved=unresolved
+org.opencps.status.cancelled=cancelled
+
 org.opencps.user.admin=admin
 org.opencps.search.sort=_sortable
 org.opencps.search.numbersort=_Number_sortable
@@ -116,3 +128,12 @@ org.opencps.value.character.c=C
 org.opencps.value.character.d=D
 org.opencps.value.character.e=E
 org.opencps.value.character.f=F
+org.opencps.value.text.markupcase.d=Đ
+org.opencps.value.text.upcase.d=D
+org.opencps.value.text.marklowercase.d=đ
+org.opencps.value.text.lowercase.d=d
+org.opencps.value.text.con=Còn 
+org.opencps.value.text.qua=Quá 
+org.opencps.value.text.day=ngày 
+org.opencps.value.patern.dossierno=opencps.dossier#
+org.opencps.value.default.url.proxy=http://127.0.0.1:8080
