--- a/modules/backend-usermgt/backend-usermgt-service/src/main/resources/config.properties
+++ b/modules/backend-usermgt/backend-usermgt-service/src/main/resources/config.properties
@@ -108,3 +108,20 @@ org.opencps.title.header.user=Ông/bà
 org.opencps.title.header.company=Quý công ty
 org.opencps.title.header.bussiness=Tổ chức
 org.opencps.user.screctcode=12345
+org.opencps.employee.action.locale=vi
+org.opencps.employee.action.locale.upp=VI
+org.opencps.employee.action.pwd.gen.1=0123456789
+org.opencps.employee.action.pwd.gen.2=ABCDEFGHIJKLMNOPQRSTUVWXYZ
+org.opencps.employee.action.pwd.gen.3=abcdefghijklmnopqrstuvwxyz
+org.opencps.employee.action.pwd.gen.4=@$
+org.opencps.employee.action.pwd.gen.5.1=0123456789
+org.opencps.employee.action.pwd.gen.5.2=ABCDEFGHIJKLMNOPQRSTUVWXYZ
+org.opencps.employee.action.pwd.gen.5.3=abcdefghijklmnopqrstuvwxyz
+org.opencps.employee.action.pwd.gen.5.4=~!@#$%^&*
+org.opencps.employee.action.lock.emp.user.status=user-status-
+org.opencps.employee.action.lock.emp.user.sendby=SYSTEM
+org.opencps.employee.action.create.new.emp.role=employee
+org.opencps.employee.action.create.new.emp.secret=12345
+org.opencps.employee.action.create.new.emp.groupid=20143
+org.opencps.applicant.listener.base.url=http://103.21.148.29/web/bo-van-hoa
+org.opencps.applicant.listener.activation.link=/register#/xac-thuc-tai-khoan?active_user_id=
