backend-synchronization attt

--- a/modules/backend-synchronization/backend-synchronization-service/src/main/resources/config.properties
+++ b/modules/backend-synchronization/backend-synchronization-service/src/main/resources/config.properties
@@ -108,3 +108,4 @@ org.opencps.title.header.user=Ông/bà
 org.opencps.title.header.company=Quý công ty
 org.opencps.title.header.bussiness=Tổ chức
 org.opencps.user.screctcode=12345
+org.opencps.dictitem.parent.code.default=0
