--- a/modules/backend-statistic-common/build.gradle
+++ b/modules/backend-statistic-common/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
+	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
 	
 	compile "org.springframework:spring-webmvc:4.3.10.RELEASE"
 	compile "org.springframework.boot:spring-boot-starter-web:1.5.6.RELEASE"
