--- a/modules/backend-postal-api-rest/build.gradle
+++ b/modules/backend-postal-api-rest/build.gradle
@@ -1,5 +1,7 @@
 
 dependencies {
+	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
+	
 	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.0.1"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	
