--- a/modules/backend-auth/build.gradle
+++ b/modules/backend-auth/build.gradle
@@ -3,6 +3,7 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
 	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
+	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
 
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
 
@@ -13,12 +14,16 @@ dependencies {
 
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.0.1"
-
 	compileOnly group: "javax.mail", name: "mail", version: "1.4"
 
 	//compileOnly group: 'org.freemarker', name: 'freemarker', version: '2.3.28'
 	compileOnly group: "com.liferay", name: "org.freemarker", version: "2.3.23.LIFERAY-PATCHED-4"
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+	compileOnly group: 'commons-io', name: 'commons-io', version: '2.6'
+	compileOnly group: "com.liferay", name: "com.liferay.portal.dao.orm.custom.sql.api", version: "1.0.0"
+	compile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxws', version: '3.3.4'
+	
 }
 repositories {
     flatDir {
