--- a/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
@@ -9,7 +9,8 @@ dependencies {
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	compileOnly group: 'commons-io', name: 'commons-io', version: '2.6'
-
+	compileOnly group: "com.liferay", name: "com.liferay.portal.dao.orm.custom.sql.api", version: "1.0.0"
+	
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-service")
