--- a/modules/backend-usermgt/backend-usermgt-service/build.gradle
+++ b/modules/backend-usermgt/backend-usermgt-service/build.gradle
@@ -8,7 +8,10 @@ dependencies {
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
-	compileOnly group: "com.liferay", name: "com.liferay.portal.security.auto.login", version: "2.0.0"
+	// https://mvnrepository.com/artifact/com.liferay/com.liferay.portal.security.auto.login
+	compileOnly group: 'com.liferay', name: 'com.liferay.portal.security.auto.login', version: '4.0.11'
+	compileOnly group: "com.liferay", name: "com.liferay.petra.encryptor", version: "3.0.0"
+	//compileOnly group: "com.liferay", name: "com.liferay.portal.security.auth.session", version: "2.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.jaxrs", version: "1.0.0"
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
