--- a/modules/dvcqg-sso/build.gradle
+++ b/modules/dvcqg-sso/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
     compileOnly group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'
     compileOnly group: 'freemarker', name: 'freemarker', version: '2.3.9'
+    compileOnly group: 'com.liferay', name: 'com.liferay.portal.security.auto.login', version: '4.0.11'
 }
 
 apply plugin: 'java' 
