--- a/modules/dvcqg-sso/build.gradle
+++ b/modules/dvcqg-sso/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
     compileOnly group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'
     compileOnly group: 'freemarker', name: 'freemarker', version: '2.3.9'
+	compileOnly group: "com.liferay.portal", name: "com.liferay.util.bridges", version: "2.0.0"
+  	compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "2.0.0"    
 }
 
 apply plugin: 'java' 
