Update backend feedback

--- a/modules/backend-api-rest/build.gradle
+++ b/modules/backend-api-rest/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 	compileOnly project(":modules:backend-admin-config:backend-admin-config-api")
 	compileOnly project(":modules:backend-admin-config:backend-admin-config-service")
 
+	compileOnly project(":modules:backend-feedback:backend-feedback-api")
+	compileOnly project(":modules:backend-feedback:backend-feedback-service")
+
 	compileOnly project(":modules:backend-auth")
 	// https://mvnrepository.com/artifact/uk.org.okapibarcode/okapibarcode
 	compile group: 'uk.org.okapibarcode', name: 'okapibarcode', version: '0.1.7'	
