--- a/modules/backend-feedback/backend-feedback-service/build.gradle
+++ b/modules/backend-feedback/backend-feedback-service/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
+
+	compileOnly project(":modules:backend-auth")
 }
 
 buildService {
