--- a/modules/backend-usermgt/backend-usermgt-service/src/main/resources/config.properties
+++ b/modules/backend-usermgt/backend-usermgt-service/src/main/resources/config.properties
@@ -1,13 +1,13 @@
-org.opencps.error.attachment=Error creating attachment response
-org.opencps.error.group=GroupId not exits!
-org.opencps.error.folder=Folder is not structure
-org.opencps.error.permission=User not permission process action!!!
-org.opencps.error.config=Dont have counter config
-org.opencps.error.captcha.incorrect=Captcha incorrect
-org.opencps.error.bussiness=Không tìm thấy thông tin doanh nghiệp
-org.opencps.error.name.bussiness=Thông tin tên doanh nghiệp có thể chưa đúng!
-org.opecps.error.internal=Internal Server Error
-org.opencps.error.nocontent=No Content
+#org.opencps.error.attachment=Error creating attachment response
+#org.opencps.error.group=GroupId not exits!
+#org.opencps.error.folder=Folder is not structure
+#org.opencps.error.permission=User not permission process action!!!
+#org.opencps.error.config=Dont have counter config
+#org.opencps.error.captcha.incorrect=Captcha incorrect
+#org.opencps.error.bussiness=Không tìm thấy thông tin doanh nghiệp
+#org.opencps.error.name.bussiness=Thông tin tên doanh nghiệp có thể chưa đúng!
+#org.opecps.error.internal=Internal Server Error
+#org.opencps.error.nocontent=No Content
 org.opencps.extention.file.zip=zip
 org.opencps.mimetype.zip=application/zip
 
@@ -105,9 +105,9 @@ org.opencps.applicant.text.upcase=ABCDEFGHIJKLMNOPQRSTUVWXYZ
 org.opencps.applicant.text.lowcase=abcdefghijklmnopqrstuvwxyz
 org.opencps.applicant.text.special=@$
 org.opencps.applicant.text.special.all=@$~!@#$%^&*
-org.opencps.title.header.user=Ông/bà
-org.opencps.title.header.company=Quý công ty
-org.opencps.title.header.bussiness=Tổ chức
+#org.opencps.title.header.user=Ông/bà
+#org.opencps.title.header.company=Quý công ty
+#org.opencps.title.header.bussiness=Tổ chức
 org.opencps.user.screctcode=12345
 org.opencps.employee.action.locale=vi
 org.opencps.employee.action.locale.upp=VI
