Update cert, comment

--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -23,3 +23,7 @@ serviceinfo.filename=services/%s.xml
 servicefiletemplate.filename=files/%s
 template.filename=templates/%s.xml
 process.filename=processes/%s.xml
+cache.groupid=groupId_%d
+cert.message.duplicate=%s đã tồn tại trong hệ thống
+api.json.status.done=done
+api.json.status.error=error
