--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,9 @@
+plugins {
+  id "org.sonarqube" version "2.6"
+}
 
+sonarqube {
+    properties {
+        property "sonar.exclusions", "**/service/persistence/impl/*.java,**/model/impl/*.java,**/com/viettel/smsbrand/*.java,**/ws/bulkSms/impl/*.java"
+    }
+}
