Update api rest

--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -3,6 +3,7 @@ barcode.filename=barcode/%s.png
 attachment.filename=attachment; filename="%s"
 http.header.bearer=Bearer %s
 query.sort=%s_sortable
+query.number.sort=%s_Number_sortable
 ngsp.ctdn.message.notfound=Không tìm thấy thông tin doanh nghiệp
 ngsp.ctdn.message.notcorrect=Thông tin tên doanh nghiệp có thể chưa đúng!
 ngsp.ctdn.message.representatives.notcorrect=Chủ sở hữu doanh nghiệp có thể thông tin chưa chính xác!
@@ -10,6 +11,7 @@ jcaptcha.filename=jcaptcha/%s.png
 jcaptcha.message.notcorrect=Captcha incorrect
 jcaptcha.description.notcorrect=Captcha incorrect
 api.permission.message.nothavepermission=User not permission process!
+api.message.filenotfound=file not found!
 citizen.dantoc.default=Không rõ
 citizen.nhommau.default=00
 citizen.quoctich.default=Viet Nam
@@ -27,3 +29,10 @@ cache.groupid=groupId_%d
 cert.message.duplicate=%s đã tồn tại trong hệ thống
 api.json.status.done=done
 api.json.status.error=error
+attachment.file.xsh.extension=text/x-sh
+attachment.file.macbinary.extension=application/macbinary
+attachment.file.msdownload.extension=application/x-msdownload
+api.json.comment.message.removesuccess=remove success
+api.message.notfound=not found!
+api.data.defaultsignature.success=success
+api.data.defaultsignature.fileEntryId=fileEntryId
