Update dossier sync API

--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -1,6 +1,7 @@
 chao=Chào
 barcode.filename=barcode/%s.png
 attachment.filename=attachment; filename="%s"
+inline.filename=inline; filename="%s"
 http.header.bearer=Bearer %s
 query.sort=%s_sortable
 query.number.sort=%s_Number_sortable
@@ -29,6 +30,9 @@ cache.groupid=groupId_%d
 cert.message.duplicate=%s đã tồn tại trong hệ thống
 api.json.status.done=done
 api.json.status.error=error
+api.json.nocontent=No Content
+api.json.message.nonauthorative=Non-Authoritative Information.
+api.json.message.internalservererror=Internal Server Error
 attachment.file.xsh.extension=text/x-sh
 attachment.file.macbinary.extension=application/macbinary
 attachment.file.msdownload.extension=application/x-msdownload
@@ -36,3 +40,14 @@ api.json.comment.message.removesuccess=remove success
 api.message.notfound=not found!
 api.data.defaultsignature.success=success
 api.data.defaultsignature.fileEntryId=fileEntryId
+dossieraction.overdue=Quá hạn
+dossieraction.undue=Còn
+dossieraction.stepoverdue=%s %.3f giờ
+dossieractionuser.usernotexists=Dossier action user already exists!
+dossieractionuser.dossiernotexists=Dossier not exists!
+dossierdocument.message.previewrenderingnotavailable=Preview rendering not avariable
+dossierdocument.message.dossierwasnotonprocess=The dossier wasn't on process
+dossierdocument.message.cannotgetdossierwithid=Cant get dossier with id_%d
+api.message.groupidnotexists=GroupId not exits!
+dossierfile.message.fileformaterror=File attach error format!
+dossierfile.message.folderisnotstructure=Folder is not structure
