DOSSIER-MGT: ATTT part2

--- a/modules/backend-dossiermgt/backend-dossiermgt-service/src/main/resources/constants.properties
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/src/main/resources/constants.properties
@@ -33,6 +33,8 @@ org.opencps.value.gov.agency=GOVERNMENT_AGENCY
 org.opencps.value.bussiness.domain=BUSINESS_DOMAIN
 org.opencps.value.activity.type=ACTIVITY_TYPE
 org.opencps.value.document.type=DOCUMENT_TYPE
+org.opencps.value.vnpost.city=VNPOST_CITY_CODE
+org.opencps.value.register.book=REGISTER_BOOK
 
 #VNPOST
 org.opencps.token.url=https://api.ngsp.gov.vn/token
