Update process plugin

--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -3,8 +3,10 @@ barcode.filename=barcode/%s.png
 attachment.filename=attachment; filename="%s"
 inline.filename=inline; filename="%s"
 http.header.bearer=Bearer %s
+http.header.basicauth=Basic %s
 query.sort=%s_sortable
 query.number.sort=%s_Number_sortable
+query.string.sort=%s_String_sortable
 ngsp.ctdn.message.notfound=Không tìm thấy thông tin doanh nghiệp
 ngsp.ctdn.message.notcorrect=Thông tin tên doanh nghiệp có thể chưa đúng!
 ngsp.ctdn.message.representatives.notcorrect=Chủ sở hữu doanh nghiệp có thể thông tin chưa chính xác!
@@ -33,6 +35,10 @@ api.json.status.error=error
 api.json.nocontent=No Content
 api.json.message.nonauthorative=Non-Authoritative Information.
 api.json.message.internalservererror=Internal Server Error
+api.json.message.notfound=NotFoundException
+api.json.message.requestbodyincorrect=request body incorrect
+api.json.message.authenticatedfailure=authentication failed
+api.json.message.cannotgetuserinfo=can't get user info
 attachment.file.xsh.extension=text/x-sh
 attachment.file.macbinary.extension=application/macbinary
 attachment.file.msdownload.extension=application/x-msdownload
@@ -51,3 +57,15 @@ dossierdocument.message.cannotgetdossierwithid=Cant get dossier with id_%d
 api.message.groupidnotexists=GroupId not exits!
 dossierfile.message.fileformaterror=File attach error format!
 dossierfile.message.folderisnotstructure=Folder is not structure
+dossiertemplate.message.notfound=No DossierTemplate was found
+eform.message.secretkeynotsuccess=secretKey not success
+eform.message.noeformexists=No eform exits
+api.json.message.captchaincorrect=Captcha incorrect
+api.json.message.errorprocessdatabase=Error process database
+api.json.message.deletesuccess=Delete is success!
+api.json.message.deletefailure=Delete is false!
+employee.profilepath=/image/user_%s/_portrait?img_id=%d&t=%d
+api.viewrooturi=/web/%s
+serviceprocess.message.duplicatestepnoexception=DuplicateStepNoException
+vgca.urlpath=%s://%d%s
+datacer.path=%s/data/cer/%s.png
